[package]
name = "parametrizer"
license = "MIT OR Apache-2.0"
description = "A simple, safe crate for parsing properly-formatted math strings representing parametric functions into Rust functions."
version = "1.0.1"
repository = "https://github.com/basstabs/parametrizer"
authors = ["basstabs <babsstabs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num="0.4"
rand="0.8.3"
